--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -22,9 +22,21 @@
 
                 <android.support.v4.view.ViewPager
                         android:id="@+id/view_pager"
+                        android:background="@drawable/image_event_card"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                 </android.support.v4.view.ViewPager>
+
+                <android.support.design.widget.TabLayout
+                        android:id="@+id/tab_view_pager"
+                        app:tabGravity="center"
+                        android:layout_gravity="bottom"
+                        app:tabIndicatorHeight="0dp"
+                        app:tabBackground="@drawable/tab"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                </android.support.design.widget.TabLayout>
 
             </FrameLayout>
 
