--- a/app/src/main/res/layout/event_card_model.xml
+++ b/app/src/main/res/layout/event_card_model.xml
@@ -57,6 +57,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="24dp"
             android:layout_marginRight="16dp"
@@ -85,7 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="24dp"
             android:layout_marginRight="16dp"
@@ -114,8 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="12dp"
             android:layout_marginStart="24dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
