--- a/app/src/main/res/layout/city_model.xml
+++ b/app/src/main/res/layout/city_model.xml
@@ -20,6 +20,7 @@
             android:id="@+id/image_view_check"
             android:src="@drawable/ic_check"
             android:layout_width="18dp"
+            android:visibility="invisible"
             android:layout_height="14dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
