--- a/app/src/main/res/layout/activity_cities.xml
+++ b/app/src/main/res/layout/activity_cities.xml
@@ -1,22 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
         android:id="@+id/city_main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <include
-            android:id="@+id/toolbar_cities"
-            layout="@layout/toolbar_cities"/>
-
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/rec_view_cities"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    <LinearLayout
+            android:id="@+id/main_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <include
+                android:id="@+id/toolbar_cities"
+                layout="@layout/toolbar_cities"/>
 
-</LinearLayout>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rec_view_cities"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+
+    <RelativeLayout
+            android:id="@+id/error_layout_city"
+            android:background="@color/colorWhite"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <ImageView
+                android:id="@+id/image_view_error_city"
+                android:layout_width="80dp"
+                android:layout_height="78dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_error_image"/>
+
+        <TextView
+                android:id="@+id/text_view_error_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="26dp"
+                android:layout_below="@+id/image_view_error"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:text="@string/text_error"
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp"/>
+
+        <FrameLayout
+                android:id="@+id/frame_error_layout_city"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@color/colorRed"
+                android:layout_alignParentBottom="true">
+
+            <TextView
+                    android:id="@+id/text_bottom_error_city"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:textSize="16sp"
+                    android:text="@string/text_error_bottom"
+                    android:textColor="@color/colorWhite"
+                    android:layout_gravity="center"/>
+
+        </FrameLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+            android:id="@+id/progress_bar_layout_city"
+            android:background="@color/colorWhite"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <ProgressBar
+                android:id="@+id/progress_bar_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_centerInParent="true"/>
+    </RelativeLayout>
+
+</FrameLayout>
